syntax = "proto3";

package auth;

import "google/protobuf/empty.proto";

option go_package = "./grpc/auth";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);

  rpc CreateRole (Role) returns (Role);
  rpc ListRole (google.protobuf.Empty) returns (RoleList);
}

message RegisterRequest {
    string name = 1;
    string username = 2;
    string email = 3;
    string password = 4;
}

message RegisterResponse {
    string id = 1;
    string username = 2;
    string name = 3;
    string email = 4;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token_type = 1;
    string access_token = 2;
    int64 access_expires_in = 3;
    string refresh_token = 4;
    int64 refresh_expires_in = 5;
}

message Role {
    string id = 1;
    string code = 2;
    repeated string scopes = 3;
}

message RoleList {
    repeated Role roles = 1;
}